# bitbite

./: .gitignore  Cargo.toml  README.md
bitbite_derive/: Cargo.toml  README.md
bitbite_derive/src/: lib.rs
src/: lib.rs
tests/: mod.rs
